--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "react-calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://anthonypz.github.io/react-calculator",
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
